<resources>

    <string name="app_name">TimerApp</string>
    <string name="start">Bắt đầu</string>
    <string name="stop">Dừng</string>
    <string name="change">Đổi</string>
    <string name="add">Thêm</string>
    <string name="alarm">Báo thức</string>
    <string name="cancel">Hủy</string>
    <string name="addAlarm">Thêm báo thức</string>
    <string name="reset">Đặt lại</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>