<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".fragment.CountDownFragment">

    <Button
        android:id="@+id/btnCountdownChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/black"
        android:textColor="@color/orange"
        android:textSize="18sp"/>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="100dp"
        android:indeterminateOnly="false"
        android:progress="200"
        android:progressDrawable="@drawable/progress_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Chronometer
        android:id="@+id/chronometerCountdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="35dp"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/progressBar" />

    <Button
        android:id="@+id/btnCountDownReset"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/reset"
        android:backgroundTint="@color/defaultColorBtnStop"/>

    <Button
        android:id="@+id/btnCountdownStart"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/start"
        android:backgroundTint="@color/defaultColorBtnStart"/>



</androidx.constraintlayout.widget.ConstraintLayout>